--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,39 @@
 body {
   margin: 0 auto;
+  width: 100%;
 }
 
 main {
   padding: 15px;
 }
 
+/*
+=================
+ HomeCards
+ ================
+*/
+
+.home-card {
+  box-sizing: border-box;
+  padding: 15px;
+  width: 100%;
+  text-decoration: none;
+  color: #333;
+}
+
+/*== > 992px ==*/
+@media screen and (min-width: 992px) {
+  .home-card {
+    display: inline-block;
+    width: 50%;
+  }
+}
+
+/*
+=================
+ Navigation 
+ ================
+*/
 nav {
   display: flex;
   justify-content: space-between;
@@ -27,23 +55,20 @@ nav ul li:hover {
   cursor: pointer;
 }
 
+nav h1 a,
 nav ul li a {
   color: #fff;
   text-decoration: none;
 }
 
-img {
-  width: 100%;
-}
-
-/*== Desktops above 800px ==*/
+/*== > 800px ==*/
 @media screen and (min-width: 800px) {
   nav div.hamburger {
     display: none;
   }
 }
 
-/*== Tablets less than 800px ==*/
+/*== < 800px ==*/
 @media screen and (max-width: 800px) {
   nav .menu {
     display: flex;
@@ -60,3 +85,7 @@ img {
     cursor: pointer;
   }
 }
+
+/*
+=================
+*/
